# shortcut-overlay-daemon

./: .gitignore  README.md  config.yaml  justfile  pyproject.toml  shortcut-overlay.service
app/: main_daemon.py  overlay_display.py  render_shortcuts.py  utils.py
app/app_detection/: __init__.py  cosmic.py  gnome.py  hyprland.py  kde.py  sway.py  x11_fallback.py
examples/: chrome_example.shortcuts  config_example.yaml
