[project]
name = "shortcut-overlay-daemon"
version = "0.1.0"
description = "Background daemon that detects the active application and shows a relevant keyboard shortcut overlay."
requires-python = ">=3.10"
dependencies = [
    "pyqt6",
    "PyGObject",
    "pillow",
    "PyYAML",
    "Jinja2",
    "shot-scraper",
    "playwright"
]

[tool.uv]
# Optional: You can freeze specific settings here if needed later
